@@ -1,3 +1,8 @@
+2007-10-13  Albert Chu  <chu11@llnl.gov>
+
+	* src/cerebrod/cerebrod_config.c,
+	src/cerebrod/cerebrod_listener.c: Continue packet forwarding work.
+	
 2007-10-12  Albert Chu  <chu11@llnl.gov>
 
 	* man/cerebro.conf.5.in, src/cerebrod/cerebrod_config.h,
